check for place in schema, hide weather, replace badge, fix heading wrap

--- a/wp-content/themes/livability/assets/sass/global/_typography.scss
+++ b/wp-content/themes/livability/assets/sass/global/_typography.scss
@@ -67,7 +67,7 @@ h5,
   align-items: center;
   margin-top: 30px;
   h2 {
-    flex-shrink: 0;
+    flex-shrink: 1;
     margin-top: 0;
     margin-right: 20px;
     margin-left: 50px;
